Closed
Bug 1350211
Opened 9 years ago
Closed 9 years ago
Re-enable native stack walking on Android
Categories
(Core :: Gecko Profiler, defect)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | unaffected |
| firefox54 | --- | fixed |
| firefox55 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: n.nethercote)
References
Details
Attachments
(2 files)
|
2.94 KB,
patch
|
mstange
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
3.01 KB,
patch
|
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Bug 1339695 part 8 accidentally disabled native stack walking on Android by
using GP_arm_android instead of GP_PLAT_arm_android in a #if. This patch fixes
that. It also fixes a couple of compile errors that crept into the relevant
code while it was disabled.
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8850850 -
Flags: review?(mstange)
Updated•9 years ago
|
Attachment #8850850 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 2•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/096b992d0b34a34e4575927e7f2d24201bd2e1f5
Bug 1350211 - Re-enable native stack walking on Android. r=mstange.
Comment 3•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 4•9 years ago
|
||
Comment on attachment 8850850 [details] [diff] [review]
Re-enable native stack walking on Android
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1339695
[User impact if declined]: No native stack walking done by the profiler on Android.
[Is this code covered by automated tests?]: Yes.
[Has the fix been verified in Nightly?]: No.
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Very simple patch, just re-enables some code that was accidentally disable; and the regression is recent.
[String changes made/needed]: None.
Attachment #8850850 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox54:
--- → affected
Comment 5•9 years ago
|
||
Comment on attachment 8850850 [details] [diff] [review]
Re-enable native stack walking on Android
Re-enable native stack walking on Android. Aurora54+.
Attachment #8850850 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•9 years ago
|
||
has problems to apply to aurora:
grafting 407897:096b992d0b34 "Bug 1350211 - Re-enable native stack walking on Android. r=mstange."
merging tools/profiler/core/platform.cpp
warning: conflicts while merging tools/profiler/core/platform.cpp! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
(use 'hg resolve' and 'hg graft --continue'
Flags: needinfo?(n.nethercote)
Updated•9 years ago
|
Flags: needinfo?(n.nethercote)
Comment 7•9 years ago
|
||
| bugherder uplift | ||
Comment 8•9 years ago
|
||
The merge conflict was easy to rebase around, but there was bustage underneath. Backed out.
https://treeherder.mozilla.org/logviewer.html#?job_id=87084445&repo=mozilla-aurora
https://hg.mozilla.org/releases/mozilla-aurora/rev/6ea48bfb090196752dbbcb1d8707080e51623f19
| Assignee | ||
Comment 9•9 years ago
|
||
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8852308 [details] [diff] [review]
Re-enable native stack walking on Android
This is the m-c patch rebased for aurora.
Flags: needinfo?(n.nethercote)
Attachment #8852308 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
Attachment #8852308 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•